MODON MRE BPDEV/force-app/main/default/objects/Outbound_Message_Config__mdt/Outbound_Message_Config__mdt.object-meta.xml
<CustomObject>
    <label>Outbound Message Config</label>
    <pluralLabel>Outbound Message Configs</pluralLabel>
</CustomObject>