MODON MRE BPDEV/force-app/main/default/objects/Outbound_Message_Config__mdt/fields/Api_Key_Header__c.field-meta.xml
<CustomField>
    <fullName>Api_Key_Header__c</fullName>
    <label>API Key Header</label>
    <length>80</length>
    <type>Text</type>
</CustomField>