MODON MRE BPDEV/force-app/main/default/objects/Outbound_Message_Config__mdt/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <label>Message Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>