MODON MRE BPDEV/force-app/main/default/objects/Outbound_Message_Config__mdt/fields/Payload_Template__c.field-meta.xml
<CustomField>
    <fullName>Payload_Template__c</fullName>
    <label>Payload Template</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>