MODON MRE BPDEV/force-app/main/default/objects/Outbound_Message_Config__mdt/fields/Root_Object__c.field-meta.xml
<CustomField>
    <fullName>Root_Object__c</fullName>
    <label>Root Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>