MODON MRE BPDEV/force-app/main/default/objects/Outbound_Message_Config__mdt/fields/SMS_Body__c.field-meta.xml
<CustomField>
    <fullName>SMS_Body__c</fullName>
    <inlineHelpText>The SMS text to send. Supports {{Field__c}}, {{Project__r.Name}} and {{runtime.x}} tokens. Sent when it fits 160 GSM characters, otherwise SMS Body Fallback is used.</inlineHelpText>
    <label>SMS Body</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>