MODON MRE BPDEV/force-app/main/default/objects/Outbound_Message_Config__mdt/fields/SMS_Body_Fallback__c.field-meta.xml
<CustomField>
    <fullName>SMS_Body_Fallback__c</fullName>
    <inlineHelpText>Shorter wording used when SMS Body exceeds 160 GSM characters. Keeps a payment link from being split across two segments.</inlineHelpText>
    <label>SMS Body Fallback</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>